--- a/web/package.json
+++ b/web/package.json
@@ -15,7 +15,8 @@
     "next-intl": "^3.26.0",
     "next-themes": "^0.4.4",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "zustand": "^5.0.2"
   },
   "devDependencies": {
     "@types/node": "^20",
