--- a/web/package.json
+++ b/web/package.json
@@ -10,6 +10,7 @@
     "format": "prettier --write ."
   },
   "dependencies": {
+    "classnames": "^2.5.1",
     "lucide-react": "^0.468.0",
     "next": "15.0.4",
     "next-intl": "^3.26.0",
