--- a/web/package.json
+++ b/web/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "classnames": "^2.5.1",
+    "js-confetti": "^0.12.0",
     "lucide-react": "^0.468.0",
     "next": "15.0.4",
     "next-intl": "^3.26.0",
