--- a/web/package.json
+++ b/web/package.json
@@ -18,6 +18,7 @@
     "next-themes": "^0.4.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "tailwind-scrollbar-hide": "^1.1.7",
     "zustand": "^5.0.2"
   },
   "devDependencies": {
