--- a/web/package.json
+++ b/web/package.json
@@ -10,6 +10,7 @@
     "format": "prettier --write ."
   },
   "dependencies": {
+    "@clerk/nextjs": "^6.9.2",
     "axios": "^1.7.9",
     "classnames": "^2.5.1",
     "js-confetti": "^0.12.0",
