--- a/web/package.json
+++ b/web/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@clerk/nextjs": "^6.9.2",
+    "@clerk/themes": "^2.2.2",
     "axios": "^1.7.9",
     "classnames": "^2.5.1",
     "js-confetti": "^0.12.0",
