--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -25,8 +25,10 @@ services:
     image: nginx:alpine
     ports:
       - "80:80"
-  volumes:
-    - ./nginx.conf:/etc/nginx/conf.d/default.conf # 挂载 Nginx 配置
-  depends_on:
-    - front
-    - backend
+    volumes:
+      - ./nginx.conf:/etc/nginx/conf.d/default.conf
+    depends_on:
+      front:
+        condition: service_started
+      backend:
+        condition: service_started
