--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,7 +8,7 @@ services:
     ports:
       - "3000:3000"
     env_file:
-      - .env
+      - ./web/.env
     restart: always
 
   backend:
@@ -18,7 +18,7 @@ services:
     ports:
       - "3080:3080"
     env_file:
-      - .env
+      - ./server/.env
     restart: always
 
   nginx:
