--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -9,9 +9,9 @@ on:
 # 环境变量
 env:
   DOCKER_REGISTRY: ghcr.io # GitHub Container Registry
-  # ${{ github.repository }} 仓库全名 (用户名/仓库名)
-  IMAGE_NAME_FRONTEND: ${{ github.repository | lower }}-frontend
-  IMAGE_NAME_BACKEND: ${{ github.repository | lower }}-backend
+  # 使用 toLowerCase() 函数替代 | lower
+  IMAGE_NAME_FRONTEND: ${{ toLowerCase(github.repository) }}-frontend
+  IMAGE_NAME_BACKEND: ${{ toLowerCase(github.repository) }}-backend
 
 jobs:
   # 构建阶段
