--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -16,16 +16,17 @@ env:
 jobs:
   # 构建阶段
   build:
-    - name: Convert image names to lowercase
-      run: |
-        echo "IMAGE_NAME_FRONTEND=${IMAGE_NAME_FRONTEND,,}" >> $GITHUB_ENV
-        echo "IMAGE_NAME_BACKEND=${IMAGE_NAME_BACKEND,,}" >> $GITHUB_ENV
-    
     # needs: test # 依赖测试作业
     runs-on: ubuntu-20.04
     if: github.event_name == 'push' && github.ref == 'refs/heads/main' # 只有 main 分支有推送时触发
     steps:
       - uses: actions/checkout@v3
+
+      # 将镜像名称转换为小写
+      - name: Convert image names to lowercase
+        run: |
+          echo "IMAGE_NAME_FRONTEND=${IMAGE_NAME_FRONTEND,,}" >> $GITHUB_ENV
+          echo "IMAGE_NAME_BACKEND=${IMAGE_NAME_BACKEND,,}" >> $GITHUB_ENV
 
       # 登录到 GitHub Container Registry
       - name: Login to GitHub Container Registry
