--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,10 +1,8 @@
 version: '3.8'
 
 services:
-  front:
-    build:
-      context: ./web
-      dockerfile: Dockerfile
+  frontend:
+    image: ghcr.io/${GITHUB_REPOSITORY}-frontend:latest
     ports:
       - "3000:3000"
     env_file:
@@ -12,9 +10,7 @@ services:
     restart: always
 
   backend:
-    build:
-      context: ./server
-      dockerfile: Dockerfile
+    image: ghcr.io/${GITHUB_REPOSITORY}-backend:latest
     ports:
       - "3080:3080"
     env_file:
