--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -66,15 +66,14 @@ jobs:
         with:
           ssh-private-key: ${{ secrets.SSH_PRIVATE_KEY }}
 
-        # 测试 SSH 连接
-      - name: Test SSH Connection
-        run: |
-          ssh ${{ secrets.SERVER_USER }}@${{ secrets.SERVER_IP }} "echo 'SSH connection successful'"
-
       # 添加服务器到已知主机
       - name: Add known hosts
         run: ssh-keyscan -H ${{ secrets.SERVER_IP }} >> ~/.ssh/known_hosts
 
+      # 测试 SSH 连接（要在 ‘添加服务器到已知主机’ 进行，一种安全机制）
+      - name: Test SSH Connection
+        run: |
+          ssh ${{ secrets.SERVER_USER }}@${{ secrets.SERVER_IP }} "echo 'SSH connection successful'"
       # 部署到服务器
       - name: Deploy to server
         run: |
