--- a/nginx.conf
+++ b/nginx.conf
@@ -1,26 +1,24 @@
 server {
   listen 80;
-  server_name localhost;
+  server_name _;
 
-  # 前端
+  # Frontend
   location / {
-    proxy_pass http://front:3000;
-
-    # 代理头信息设置
-    proxy_set_header Host $host;  # 传递原始主机名
-    proxy_set_header X-Real-IP $remote_addr; # 传递客户端真实 IP
-    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for; # 传递代理链路信息
-    proxy_set_header X-Forwarded-Proto $scheme; # 传递协议信息（http/https）
+    proxy_pass http://photowake-frontend:3000;
+    proxy_http_version 1.1;
+    proxy_set_header Upgrade $http_upgrade;
+    proxy_set_header Connection 'upgrade';
+    proxy_set_header Host $host;
+    proxy_cache_bypass $http_upgrade;
   }
 
-  # 后端
+  # Backend
   location /api {
-    proxy_pass http://backend:3080;
-
-    # 代理头信息设置（同上）
+    proxy_pass http://photowake-backend:3080;
+    proxy_http_version 1.1;
+    proxy_set_header Upgrade $http_upgrade;
+    proxy_set_header Connection 'upgrade';
     proxy_set_header Host $host;
-    proxy_set_header X-Real-IP $remote_addr;
-    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-    proxy_set_header X-Forwarded-Proto $scheme;
+    proxy_cache_bypass $http_upgrade;
   }
 }
