--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 version: '3.8'
 
 services:
-  frontend:
+  photowake-frontend:
     image: ghcr.io/${GITHUB_REPOSITORY}-frontend:latest
     ports:
       - "3000:3000"
@@ -9,7 +9,7 @@ services:
       - ./web/.env
     restart: always
 
-  backend:
+  photowake-backend:
     image: ghcr.io/${GITHUB_REPOSITORY}-backend:latest
     ports:
       - "3080:3080"
@@ -24,7 +24,7 @@ services:
     volumes:
       - ./nginx.conf:/etc/nginx/conf.d/default.conf
     depends_on:
-      front:
+      photowake-frontend:
         condition: service_started
-      backend:
+      photowake-backend:
         condition: service_started
