--- a/web/dockerfile
+++ b/web/dockerfile
@@ -8,10 +8,9 @@ RUN npm install -g pnpm && pnpm install
 
 COPY . .
 
+ENV NODE_ENV=production
 RUN pnpm run build
 
 EXPOSE 3000
 
-ENV NODE_ENV=production
-
-CMD ["pnpm", "run", "start"]
+CMD ["pnpm", "start"]
