--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -106,6 +106,11 @@ jobs:
             set -e  # 任何命令失败立即退出
             cd /home/photowake
             
+            # 添加这些行来创建或更新 .env 文件
+            cat > .env << EOF
+            NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY=${{ secrets.NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY }}
+            EOF
+            
             # 备份当前的 docker-compose.yml
             cp docker-compose.yml docker-compose.yml.backup
             
