--- a/web/dockerfile
+++ b/web/dockerfile
@@ -1,5 +1,9 @@
 FROM node:20-alpine
 
+# 添加构建参数
+ARG NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY
+ENV NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY=$NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY
+
 WORKDIR /web
 
 COPY package.json ./
