--- a/web/dockerfile
+++ b/web/dockerfile
@@ -12,9 +12,13 @@ RUN npm install -g pnpm && pnpm install
 
 COPY . .
 
+# 确保在构建时使用环境变量
 ENV NODE_ENV=production
+ENV NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY=$NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY
+
 RUN pnpm run build
 
 EXPOSE 3000
 
-CMD ["pnpm", "start"]
+# 确保在运行时也能获取环境变量
+CMD ["sh", "-c", "NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY=$NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY pnpm start"]
