--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -102,6 +102,22 @@ jobs:
           ssh ${{ secrets.SERVER_USER }}@${{ secrets.SERVER_IP }} << 'ENDSSH'
             set -e  # 任何命令失败立即退出
             cd /home/photowake
+
+            mkdir -p web server
+            # 创建前端环境文件
+            cat > web/.env << EOF
+            # 添加前端需要的环境变量
+            NEXT_PUBLIC_API_URL=http://199.245.101.224:3080/api
+            # ... 其他前端环境变量
+            EOF
+
+            # 创建后端环境文件
+            cat > server/.env << EOF
+            # 添加后端需要的环境变量
+            # ...
+            EOF
+
+            chmod 600 web/.env server/.env
             
             # 备份当前的 docker-compose.yml
             cp docker-compose.yml docker-compose.yml.backup
