--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -105,19 +105,12 @@ jobs:
 
             # 确保目录存在并设置正确的权限
             sudo mkdir -p web server
+
+            # 确保当前用户拥有目录的所有权
             sudo chown -R $USER:$USER web server
-
-            # 创建前端环境文件
-            cat > web/.env << EOL
-            NEXT_PUBLIC_API_URL=http://199.245.101.224:3080/api
-            # ... 其他前端环境变量
-            EOL
-
-            # 创建后端环境文件
-            cat > server/.env << EOL
-            # 添加后端需要的环境变量
-            # ...
-            EOL
+            
+            # 如果 .env 文件不存在，创建空文件
+            touch web/.env server/.env
 
             # 设置环境文件权限
             chmod 600 web/.env server/.env
