--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -21,10 +21,40 @@ services:
     image: nginx:alpine
     ports:
       - "80:80"
-    volumes:
-      - /home/photowake/nginx.conf:/etc/nginx/conf.d/default.conf
     depends_on:
-      photowake-frontend:
-        condition: service_started
-      photowake-backend:
-        condition: service_started
+      - photowake-frontend
+      - photowake-backend
+    command: |
+      /bin/sh -c "echo 'server {
+        listen 80;
+        server_name _;
+
+        # Frontend
+        location / {
+          proxy_pass http://photowake-frontend:3000;
+          proxy_http_version 1.1;
+          proxy_set_header Upgrade \$$http_upgrade;
+          proxy_set_header Connection \"upgrade\";
+          proxy_set_header Host \$$host;
+          proxy_cache_bypass \$$http_upgrade;
+        }
+
+        # Backend API
+        location /api {
+          rewrite ^/api/(.*) /\$$1 break;
+          proxy_pass http://photowake-backend:3080;
+          proxy_http_version 1.1;
+          proxy_set_header Upgrade \$$http_upgrade;
+          proxy_set_header Connection \"upgrade\";
+          proxy_set_header Host \$$host;
+          proxy_cache_bypass \$$http_upgrade;
+        }
+
+        # Health check endpoint
+        location /health {
+          proxy_pass http://photowake-backend:3080/health;
+          proxy_http_version 1.1;
+          proxy_set_header Host \$$host;
+          proxy_cache_bypass \$$http_upgrade;
+        }
+      }' > /etc/nginx/conf.d/default.conf && nginx -g 'daemon off;'"
