--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,6 +8,8 @@ services:
     environment:
       - NODE_ENV=production
     restart: always
+    networks:
+      - photowake-network
 
   photowake-backend:
     image: ghcr.io/slince-zero/photowake-backend:latest
@@ -16,6 +18,13 @@ services:
     environment:
       - NODE_ENV=production
     restart: always
+    networks:
+      - photowake-network
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost:3080/health"]
+      interval: 30s
+      timeout: 10s
+      retries: 3
 
   nginx:
     image: nginx:alpine
@@ -24,6 +33,8 @@ services:
     depends_on:
       - photowake-frontend
       - photowake-backend
+    networks:
+      - photowake-network
     command: |
       /bin/sh -c "echo 'server {
         listen 80;
@@ -51,10 +62,14 @@ services:
         }
 
         # Health check endpoint
-        location /health {
-          proxy_pass http://photowake-backend:3080/health;
+        location = /health {
+          proxy_pass http://photowake-backend:3080/api/health;
           proxy_http_version 1.1;
           proxy_set_header Host \$$host;
           proxy_cache_bypass \$$http_upgrade;
         }
       }' > /etc/nginx/conf.d/default.conf && nginx -g 'daemon off;'"
+
+networks:
+  photowake-network:
+    driver: bridge
